team pages skeleton

--- a/team-bio.html
+++ b/team-bio.html
@@ -56,26 +56,61 @@
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
-      <div class="row">
+      <div class="row1">
         <div class="col-lg-4">
           <img class="img-circle" src="images/thumbs/120010.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;">
-          <h3>Portrait of Eleanor of Toledo</h3>
-          <p class="text-justify"><em>The Portrait of Eleanor of Toledo and Her Son</em> is a painting by the Italian artist Agnolo di Cosimo, known as Bronzino, finished ca. 1545. One of his most famous works, it is housed in the Uffizi Gallery of Florence, Italy and is considered one of the preeminent examples of Mannerist portraiture.</p>
+          <h3>Lienna Tieu</h3>
+          <p class="text-justify">Informatics major with focus in Geo-Informatics and a certificate in Geographic Information Systems. Graduating in May 2022. I like to design things to make information and data easier to understand.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
+
+
         <div class="col-lg-4">
           <img class="img-circle" src="images/thumbs/116010.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;">
-          <h3>Portrait of the Artist</h3>
-          <p class="text-justify"><em>Portrait of the Artist Holding a Thistle</em> is an oil painting on parchment pasted on canvas by German artist Albrecht D&#252;rer, painted in 1493. It is the earliest of D&#252;rer&#39;s painted self-portraits and has been identified as one of the first self-portraits painted by a Northern artist.</p>
+          <h3>Sammy Romero </h3>
+          <p class="text-justify"> Informatics major hopefully graduating in Spring 2022
+            No specific focuses or experience, but many of my hobbies involve the internet, programming, and databases (video games, esports, online media). Those are what have drawn me into the field.
+            </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
+
+        
         <div class="col-lg-4">
           <img class="img-circle" src="images/thumbs/106020.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;">
-          <h3>Girl with a Pearl Earring</h3>
-          <p class="text-justify"><em>Girl with a Pearl Earring</em> is one of Johannes Vermeer's masterworks and, as the name implies, uses a pearl earring for a focal point. Today the painting is kept in the Mauritshuis gallery in The Hague. It is sometimes referred to as "the Mona Lisa of the North" or "the Dutch Mona Lisa".</p>
+          <h3>Jacob Melendrez</h3>
+          <p class="text-justify">Informatics major and recently switched to a digital culture focus area
+            Hopefully graduating in Dec 2021
+            I like to program useful things to help me with my hobbies (DnD, video games, cards, design, etc.)
+            </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
+      </div><!-- /.row1 -->
+      <div>
+
+     <div class="row2">
+      <div class="col-lg-4">
+        <img class="img-circle" src="images/thumbs/120010.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;">
+        <h3>Unique Ratliff</h3>
+        <p class="text-justify">I’m a computer science major graduating (fingers-crossed) Spring 2021. I’ve always enjoyed web development and am interested in UI/UX/HCI.</p>
+        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      </div><!-- /.col-lg-4 -->
+
+      <div class="col-lg-4">
+        <img class="img-circle" src="images/thumbs/120010.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;">
+        <h3>Kai Sanford</h3>
+        <p class="text-justify">Informatics Major graduating hopefully by Spring 2022
+          No real experience, but my interests are in UX and game dev
+          </p>
+        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      </div><!-- /.col-lg-4 -->
+
+      <div class="col-lg-4">
+        <img class="img-circle" src="images/thumbs/120010.jpg" alt="Generic placeholder image" style="width: 100px; height: 100px;">
+        <h3>Nate Renfro</h3>
+        <p class="text-justify">I’m an Informatics major hoping to graduate in the spring of 2022. I’ve got experience in full stack web development and my interests lie in both web and video game development. </p>
+        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      </div><!-- /.col-lg-4 -->
+     </div><!-- row2-->
 
 
 
