--- a/team-bio.html
+++ b/team-bio.html
@@ -16,8 +16,8 @@
     <!-- Custom styles for this template -->
     <link href="index.css" rel="stylesheet">
   </head>
-<!-- NAVBAR
-================================================== -->
+
+ <!-- NAVBAR ================================================== -->
   <body>
     <div class="navbar-wrapper">
       <div class="container">
@@ -35,10 +35,11 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="assign2-index.html">Helllloooooooooooooooo</a></li>
-                <li><a href="assign2-about.html">About</a></li>
-                <li><a href="assign2-work.html">Work</a></li>  
-                <li><a href="assign2-artists.html">Artists</a></li>                
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="work.html">Specifications</a></li>  
+                <li><a href="artists.html">Project</a></li> 
+                <li><a href="artists.html">Team</a></li>                 
               </ul>
             </div>
           </div>
