--- a/team-bio.html
+++ b/team-bio.html
@@ -47,7 +47,8 @@
         <div class="member-name">Jacob Melendrez</div>
         Informatics major and recently switched to a digital culture focus area Hopefully graduating in Dec 2021 I like to program useful things to help me with my hobbies (DnD, video games, cards, design, etc.) 
       </div>
-    </div>
+    </div><!-- row bio-row -->
+    
     <div class="row bio-row">
       <div class="col-md-4">
         <div class="member-name">Kai Sanford</div>
@@ -61,8 +62,8 @@
         <div class="member-name">Unique Ratliff</div>
         I’m a computer science major graduating (fingers-crossed) Spring 2021. I’ve always enjoyed web development and am interested in UI/UX/HCI.
       </div>
-    </div>
-  </div>
+    </div> <!-- row bio-row -->
+  </div> <!-- container bio-container -->
 
 
 
