--- a/team-bio.html
+++ b/team-bio.html
@@ -20,7 +20,7 @@
 <!-- NAVBAR ================================================== -->
 
 <body>
-  <img src="main-logo-alabaster.png" alt="main logo" class="img-thumbnail">
+  <a href="index.html"><img src="main-logo-alabaster.png" alt="main logo" class="img-thumbnail"></a>
   <div class="container">
     <nav class="navbar navbar-expand">
     <ul class="navbar-nav">
