--- a/team-bio.html
+++ b/team-bio.html
@@ -53,7 +53,7 @@
   
     <div class="column">
       <div class="card">
-        <img src="Jacob.jpg" alt="John" class="img-fluid">
+        <img src="Jacob.jpg" alt="Jacob" class="img-fluid">
         <div class="container">
           <div class="h2">Jacob Melendrez</div>
           <p class="title">Back End</p>
@@ -65,7 +65,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="member-placeholder.png" alt="Mike" class="img-fluid">
+        <img src="member-placeholder.png" alt="Sammy" class="img-fluid">
         <div class="container">
           <div class="h2">Sammy Romero </div>
           <p class="title">Integration</p>
@@ -92,7 +92,7 @@
   
     <div class="column">
       <div class="card">
-        <img src="Kai.jpg" alt="Mike" class="img-fluid">
+        <img src="Kai.jpg" alt="Kai" class="img-fluid">
         <div class="container">
           <div class="h2">Kai Sanford</div>
           <p class="title">Back End</p>
@@ -104,7 +104,7 @@
   
     <div class="column">
       <div class="card">
-        <img src="member-placeholder.png" alt="John" class="img-fluid">
+        <img src="Nate.png" alt="Nate" class="img-fluid">
         <div class="container">
           <div class="h2">Nate Renfro</div>
           <p class="title">Integration</p>
