team page update

--- a/team-bio.html
+++ b/team-bio.html
@@ -34,7 +34,6 @@
   </div>
 
   <!-- ===== ROWS AND COLUMNS OF TEAM MEMBERS ===== -->
-  <img src= "https://images.unsplash.com/photo-1517048676732-d65bc937f952?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="img-fluid" alt="Welcome Photo">
   <div class = "header"> Team Members.</div>
 
   <!-- ROW ONE -->
@@ -65,7 +64,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="member-placeholder.png" alt="Sammy" class="img-fluid">
+        <img src="Sammy.jpg" alt="Sammy" class="img-fluid">
         <div class="container">
           <div class="h2">Sammy Romero </div>
           <p class="title">Integration</p>
