--- a/team-bio.html
+++ b/team-bio.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="main-logo-white.png">
+  <link rel="icon" href="img/main-logo-white.png">
   <title>Warning Watchers</title>
 
   <link href='http://fonts.googleapis.com/css?family=Cuprum|Cookie' rel='stylesheet' type='text/css'>
@@ -13,14 +13,14 @@
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
-  <!-- Custom styles for this template -->
-  <link href="team-bio.css" rel="stylesheet">
+  <!-- Cuxstom styles for this template -->
+  <link href="styling/team-bio.css" rel="stylesheet">
 </head>
 
 <!-- NAVBAR ================================================== -->
 
 <body>
-  <a href="index.html"><img src="main-logo-alabaster.png" alt="main logo" class="img-thumbnail"></a>
+  <a href="index.html"><img src="img/main-logo-alabaster.png" alt="main logo" class="img-thumbnail"></a>
   <div class="container">
     <nav class="navbar navbar-expand">
     <ul class="navbar-nav">
@@ -40,7 +40,7 @@
   <div class="row">
     <div class="column">
       <div class="card">
-        <img src="Lienna.jpg" class="img-fluid" alt="Lienna">
+        <img src="img/Lienna.jpg" class="img-fluid" alt="Lienna">
         <div class="container">
           <div class="h2">Lienna Tieu</div>
           <p class="title">Front End</p>
@@ -52,7 +52,7 @@
   
     <div class="column">
       <div class="card">
-        <img src="Jacob.jpg" alt="Jacob" class="img-fluid">
+        <img src="img/Jacob.jpg" alt="Jacob" class="img-fluid">
         <div class="container">
           <div class="h2">Jacob Melendrez</div>
           <p class="title">Back End</p>
@@ -64,7 +64,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="Sammy.jpg" alt="Sammy" class="img-fluid">
+        <img src="img/Sammy.jpg" alt="Sammy" class="img-fluid">
         <div class="container">
           <div class="h2">Sammy Romero </div>
           <p class="title">Integration</p>
@@ -79,7 +79,7 @@
   <div class="row">
     <div class="column">
       <div class="card">
-        <img src="Unique.jpg" alt="Unique" class="img-fluid">
+        <img src="img/Unique.jpg" alt="Unique" class="img-fluid">
         <div class="container">
           <div class="h2">Unique Ratliff</div>
           <p class="title">Front End</p>
@@ -91,7 +91,7 @@
   
     <div class="column">
       <div class="card">
-        <img src="Kai.jpg" alt="Kai" class="img-fluid">
+        <img src="img/Kai.jpg" alt="Kai" class="img-fluid">
         <div class="container">
           <div class="h2">Kai Sanford</div>
           <p class="title">Back End</p>
@@ -103,7 +103,7 @@
   
     <div class="column">
       <div class="card">
-        <img src="Nate.png" alt="Nate" class="img-fluid">
+        <img src="img/Nate.png" alt="Nate" class="img-fluid">
         <div class="container">
           <div class="h2">Nate Renfro</div>
           <p class="title">Integration</p>
